feat: 응답 결과 조회에 대한 테스트 추가 및 공통 응답 객체 생성